@@ -98,6 +98,7 @@ sk_sp<const GrGLInterface> GrGLMakeAssembledWebGLInterface(void *ctx, GrGLGetPro
     GET_PROC(GenTextures);
     GET_PROC(GetBufferParameteriv);
     GET_PROC(GetError);
+    GET_PROC(GetFloatv);
     GET_PROC(GetIntegerv);
     GET_PROC(GetProgramInfoLog);
     GET_PROC(GetProgramiv);
@@ -239,6 +240,7 @@ sk_sp<const GrGLInterface> GrGLMakeAssembledWebGLInterface(void *ctx, GrGLGetPro
         GET_PROC(BindSampler);
         GET_PROC(DeleteSamplers);
         GET_PROC(GenSamplers);
+        GET_PROC(SamplerParameterf);
         GET_PROC(SamplerParameteri);
         GET_PROC(SamplerParameteriv);
     }
